# etf-central

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: __init__.py  action_loader.py  config.py  database.py  engine.py  guards.py  main.py  middleware.py  models.py  registry.py  seed.py  trigger_engine.py  trigger_router.py
backend/app/actions/: __init__.py  communication.py  payment.py  validation.py  workflow_control.py
backend/app/api/: instances.py  state_machines_api.py
backend/app/schemas/: __init__.py  trigger_schemas.py
backend/app/services/: async_task_service.py  transition_metadata_service.py
backend/app/utils/: mocks.py
backend/tests/: conftest.py  test_etf_order_lifecycle.py  test_health.py  test_instances.py  test_workflow_crud.py
docs/: DEVELOPER_GUIDE.md  ETF_ORDER_WORKFLOW.md  FUTURE_WORK.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  etfOrders.ts  types.ts
frontend/src/components/: Header.tsx  MarketColorRow.tsx  OrderBlotter.tsx  OrderDetailPanel.tsx  OrderEntryPanel.tsx  PositionsPanel.tsx  StatusBadge.tsx  StatusBar.tsx
frontend/src/data/: mockMarketData.ts  mockPositions.ts
frontend/src/hooks/: useClock.ts  useCreateOrder.ts  useOrders.ts
frontend/src/lib/: constants.ts  formatters.ts
scripts/: etf-workflow-test.sh  seed-etf-workflow.sh  start.sh
